Cycles Film Exposure not triggering Viewport update #42178

Closed
opened 2014-10-10 21:56:13 +02:00 by Maverick · 11 comments

System Information
win8 64 i7 gtx titan

Blender Version
blender-2.72-47b8bf5-win64

Short description of error
Changing the film exposure does not update the viewport.
You must get out of rendered mode and back again to trigger the viewport to update (very slow when adjusting scene lighting).

Thank you

**System Information** win8 64 i7 gtx titan **Blender Version** blender-2.72-47b8bf5-win64 **Short description of error** Changing the film exposure does not update the viewport. You must get out of rendered mode and back again to trigger the viewport to update (very slow when adjusting scene lighting). Thank you
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author

Additional details: fails to update if the maximum number of samples is reached

Additional details: fails to update if the maximum number of samples is reached
Sergey Sharybin was assigned by Bastien Montagne 2014-10-11 15:31:15 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed. Investigated a bit, Film object is tagged as needing update, but for some reason doe not affect the render... Sergey, will let this to you. :)

Confirmed. Investigated a bit, Film object *is* tagged as needing update, but for some reason doe not affect the render... Sergey, will let this to you. :)
Author

Hmm, this might be expensive. Unless the update is made through some kind of signal it could affect performance due to checking, updating and copying the tile buffers.

Probably the easiest solution is to just trigger a rerender rather then updating the buffers (the artists judges if more exposure is required after just a few rendered samples).

Hmm, this might be expensive. Unless the update is made through some kind of signal it could affect performance due to checking, updating and copying the tile buffers. Probably the easiest solution is to just trigger a rerender rather then updating the buffers (the artists judges if more exposure is required after just a few rendered samples).
swarfbot commented 2014-10-12 01:01:12 +02:00 (Migrated from localhost:3001)

Added subscriber: @swarfbot

Added subscriber: @swarfbot
swarfbot commented 2014-10-12 01:01:12 +02:00 (Migrated from localhost:3001)

The film exposure (according to me but there's a large chance I'm wrong since I'm neither a programmer nor very familiar with cycles code) is just a value passed to cycles. Then cycles passes the calculated bits to the image buffer which is displayed in the viewport. The viewport exposure and gamma can be changed by the controls under Scene > Colour Management tab. This works under blender 2.72 for me, you may want to check if it's the same for you.

The film exposure (according to me but there's a large chance I'm wrong since I'm neither a programmer nor very familiar with cycles code) is just a value passed to cycles. Then cycles passes the calculated bits to the image buffer which is displayed in the viewport. The viewport exposure and gamma can be changed by the controls under Scene > Colour Management tab. This works under blender 2.72 for me, you may want to check if it's the same for you.

This issue was referenced by 5e2f3c0102

This issue was referenced by 5e2f3c01028afc036545bc2a1786497816bdfdcc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5e2f3c0102.

Closed by commit 5e2f3c0102.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42178
No description provided.