Fix T42178: Cycles Film Exposure not triggering Viewport update